--- a/age-calculator-app/package.json
+++ b/age-calculator-app/package.json
@@ -13,10 +13,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/vue": "^1.6.2",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
